# automations

./: Cargo.nix  Cargo.toml  DEV.org  flake.nix  result
migrations/2023-06-19-113321_create-wallets/: up.sql
migrations/2023-06-19-114639_create-pending-transfers/: up.sql
src/: config.rs  main.rs  structs.rs
src/handler/message_handler/: mod.rs
src/handler/message_handler/send_notification/: mod.rs
src/handler/message_handler/switch_workspace/: mod.rs
src/helpers/: mod.rs
src/helpers/generate_html/: mod.rs
