[package]
name = "automations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-subscriber = "0.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1"
paho-mqtt = "0.10"